<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.generic.VirtualStockGame.Signup_Screen"
    android:background="#0099FF">


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txt_Username"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/Username"
        android:singleLine="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/txt_Email"
        android:layout_below="@+id/txt_Username"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:singleLine="true"
        android:hint="@string/Email" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/txt_Phone"
        android:layout_below="@+id/txt_Email"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/Mobile_Number"
        android:singleLine="true"
        android:phoneNumber="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txt_Password"
        android:layout_below="@+id/txt_Phone"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:password="true"
        android:singleLine="true"
        android:maxLength="20"
        android:hint="@string/Password" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txt_Conf_Password"
        android:layout_below="@+id/txt_Password"
        android:layout_alignLeft="@+id/txt_Password"
        android:layout_alignStart="@+id/txt_Password"
        android:password="true"
        android:maxLength="20"
        android:hint="@string/Conf_Password" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Signup"
        android:id="@+id/btn_Signup"
        android:layout_below="@+id/txt_Conf_Password"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:singleLine="true" />
</RelativeLayout>
